// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Project/AddUser Default 1`] = `
.c9 {
  height: 155px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c10 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c12 {
  width: calc(50% - 5px);
}

.c1 {
  width: calc(100% - 50px);
}

.c2 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  margin: 20px -20px 0 0;
  padding-right: 20px;
  -webkit-overflow-scrolling: touch;
}

.c3 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-bottom: 20px;
}

.c4 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: none;
}

.c6 {
  margin-right: 20px;
}

.c7 {
  color: #FFF;
}

.c8 {
  color: #FFF;
}

@media (min-width:1040px) {
  .c11 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1040px) {
  .c10 {
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c12 {
    width: 23.5%;
    -webkit-transform: translateX(255px);
    -ms-transform: translateX(255px);
    transform: translateX(255px);
  }
}

@media (min-width:1040px) {
  .c1 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: flex-end;
    -webkit-box-align: flex-end;
    -ms-flex-align: flex-end;
    align-items: flex-end;
    margin: 60px 0 40px 0;
  }
}

@media (min-width:1040px) {
  .c0 {
    margin-top: 70px;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className=""
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              <span>
                Users
              </span>
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              <span>
                Invite Users
              </span>
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderOpenMenuBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className=""
        >
          <div
            className=""
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              <span>
                Users
              </span>
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              <span>
                Invite Users
              </span>
            </h1>
          </div>
        </div>
        <div
          className="c2"
        >
          <ul
            className="c3"
          />
          <ul
            className="c4"
          />
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <h2
          className="c7"
          id="desktopHeaderTitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          <span>
            Users
          </span>
        </h2>
        <h1
          className="c8"
          id="desktopHeaderSubtitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          <span>
            Invite Users
          </span>
        </h1>
      </div>
      <div
        className=""
      />
    </div>
    <div
      className="c9"
    >
      <div
        className="c10"
      >
        <div
          className="c11"
        >
          <button
            className="c12"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
              }
            }
            type="back"
          >
            <span>
              Back
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Project/AddUser with users 1`] = `
.c16 {
  height: 155px;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c17 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c19 {
  width: calc(50% - 5px);
}

.c1 {
  width: calc(100% - 50px);
}

.c2 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  margin: 20px -20px 0 0;
  padding-right: 20px;
  -webkit-overflow-scrolling: touch;
}

.c3 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-bottom: 20px;
}

.c4 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: none;
}

.c6 {
  margin-right: 20px;
}

.c7 {
  color: #FFF;
}

.c8 {
  color: #FFF;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 5px 0;
  padding: 10px 0;
  color: #b7b7b7;
  border-top: 1px solid #b7b7b7;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-left: 10px;
}

.c15 {
  position: relative;
  height: 15px;
  width: 15px;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c15:before {
  content: '';
  position: absolute;
  height: 15px;
  width: 2px;
  background-color: #b7b7b7;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  top: 0;
}

.c15:after {
  content: '';
  position: absolute;
  height: 2px;
  width: 15px;
  background-color: #b7b7b7;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 0;
}

.c14 {
  position: relative;
  height: 15px;
  width: 15px;
}

.c14:after {
  content: '';
  position: absolute;
  height: 2px;
  width: 15px;
  background-color: #b7b7b7;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 0;
}

.c13 {
  background-color: transparent !important;
}

.c11 {
  word-break: break-all;
}

@media (min-width:1040px) {
  .c18 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1040px) {
  .c17 {
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c19 {
    width: 23.5%;
    -webkit-transform: translateX(255px);
    -ms-transform: translateX(255px);
    transform: translateX(255px);
  }
}

@media (min-width:1040px) {
  .c1 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: flex-end;
    -webkit-box-align: flex-end;
    -ms-flex-align: flex-end;
    align-items: flex-end;
    margin: 60px 0 40px 0;
  }
}

@media (min-width:1040px) {
  .c0 {
    margin-top: 70px;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className=""
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              <span>
                Users
              </span>
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              <span>
                Invite Users
              </span>
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderOpenMenuBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className=""
        >
          <div
            className=""
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              <span>
                Users
              </span>
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              <span>
                Invite Users
              </span>
            </h1>
          </div>
        </div>
        <div
          className="c2"
        >
          <ul
            className="c3"
          />
          <ul
            className="c4"
          />
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <h2
          className="c7"
          id="desktopHeaderTitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          <span>
            Users
          </span>
        </h2>
        <h1
          className="c8"
          id="desktopHeaderSubtitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          <span>
            Invite Users
          </span>
        </h1>
      </div>
      <div
        className=""
      />
    </div>
    <div
      className="c9"
    >
      <div
        className="c10"
      >
        <h2
          className=""
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Alan Watts
        </h2>
        <h3
          className="c11"
          style={
            Object {
              "color": Object {
                "border": "#f0efef",
                "text": "#a6a7aa",
              },
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "18px",
              "fontWeight": 600,
              "margin": 0,
            }
          }
        />
      </div>
      <div
        className="c12"
      >
        <button
          className="c13"
          disabled={false}
          id="removeUserPlusButton0"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
            }
          }
        >
          <div
            className="c14"
          />
        </button>
      </div>
    </div>
    <div
      className="c9"
    >
      <div
        className="c10"
      >
        <h2
          className=""
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Dale Chihuly
        </h2>
        <h3
          className="c11"
          style={
            Object {
              "color": Object {
                "border": "#f0efef",
                "text": "#a6a7aa",
              },
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "18px",
              "fontWeight": 600,
              "margin": 0,
            }
          }
        >
          loremipsumdolorsitametconsecteturadipiscinglitdonecobortis@nisitnullalobortisiaculis.com
        </h3>
      </div>
      <div
        className="c12"
      >
        <button
          className="c13"
          disabled={false}
          id="addUserPlusButton1"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
            }
          }
        >
          <div
            className="c15"
          />
        </button>
      </div>
    </div>
    <div
      className="c9"
    >
      <div
        className="c10"
      >
        <h2
          className=""
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Dave Bowie
        </h2>
        <h3
          className="c11"
          style={
            Object {
              "color": Object {
                "border": "#f0efef",
                "text": "#a6a7aa",
              },
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "18px",
              "fontWeight": 600,
              "margin": 0,
            }
          }
        />
      </div>
      <div
        className="c12"
      >
        <button
          className="c13"
          disabled={false}
          id="addUserPlusButton2"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
            }
          }
        >
          <div
            className="c15"
          />
        </button>
      </div>
    </div>
    <div
      className="c9"
    >
      <div
        className="c10"
      >
        <h2
          className=""
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Pellentesque a massa at purus cursus egestas. Aliquam ut vehicula. Praesent est erat, laoreet et ornare ullamcorper, finibus id nisl. Etiam tempor, ligula a sagittis
        </h2>
        <h3
          className="c11"
          style={
            Object {
              "color": Object {
                "border": "#f0efef",
                "text": "#a6a7aa",
              },
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "18px",
              "fontWeight": 600,
              "margin": 0,
            }
          }
        >
          loremipsumdolorsitametconsecteturadipiscinglitdonecobortis@nisitnullalobortisiaculis.com
        </h3>
      </div>
      <div
        className="c12"
      >
        <button
          className="c13"
          disabled={false}
          id="addUserPlusButton3"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
            }
          }
        >
          <div
            className="c15"
          />
        </button>
      </div>
    </div>
    <div
      className="c16"
    >
      <div
        className="c17"
      >
        <div
          className="c18"
        >
          <button
            className="c19"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
              }
            }
            type="back"
          >
            <span>
              Back
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
